--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -9,9 +9,12 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="manifest" href="manifest.json">
 
   <title>Budget Tracker</title>
 </head>
+
+<!--Start of the Body-->
 <body>
   <div class="wrapper">
     <div class="total">
@@ -41,7 +44,10 @@
     <canvas id="myChart"></canvas>
   </div>
 
+  <!--Start of the Script src-->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="js/index.js"></script>
+  <script src="/js/db.js"></script>
 </body>
+
 </html>
