--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -49,5 +49,14 @@
   <script src="js/index.js"></script>
   <script src="/js/db.js"></script>
 </body>
+<script>
+  (function() {
+    if("serviceWorker" in navigator) {
+      navigator.serviceWorker.register('./serviceWorker.js')
+      .then(() => console.log("Service Worker has registered correctly."))
+      .catch(error => console.log("Service Worker has Failed."))
+    }
+  })();
+</script>
 
 </html>
