--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
   <!--Start of the Script src-->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="js/index.js"></script>
-  <script src="/js/db.js"></script>
+  <script src="js/db.js"></script>
 </body>
 <script>
   (function() {
